[package]
name = "CANPiServer"
version = "0.1.0"
authors = ["Mark Thornber <mark.thornber@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["canpi-config", "canpi-web-service", "canpi-web-app-ssr"]

[dependencies]
